--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>Char Sharma Profile</title>
+</head>
+<body>
+
+<h1>Projects</h1>
+<p> <a href= "https://github.com/Sharma117555448/ENPM661/tree/main/Project1_Charu_Sharma" >BFS Search</a>: Solving an 15-puzzle problem using BFS search</p>
+<p> <a href= "https://github.com/Sharma117555448/ENPM661/tree/main/Project3(phase1)-Charu_Sharma" > Dijkstra Search</a>: Path Planning in a 2D environment using OpenCV</p>
+<p> <a href = "https://github.com/Sharma117555448/ENPM661/tree/main/bot_controller" > A* Path Planning</a>: Path Planning of a robot using A* Algorithm </p>
+<p> <a href = "https://github.com/Sharma117555448/PID_Control" > PID Controller</a>: Implemeting a PID controller </p>
+<p> <a href = "https://github.com/Sharma117555448/turtlebot-simulations" > Object Detection</a>: Implemeting a object-detection and avoidance module using turtlebot </p>
+<p> <a href = "https://github.com/Sharma117555448/Robot_Contoller-1" > Robot Controller</a>: Implemeting a controller to a 2 Wheel Drive Robot</p>
+
+</body>
+</html>
